迁移AE2配置复制组件